maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:60: error: ':' expected but ',' found.
def marquerAutour(x, y)
                   ^ShortestPathMaze:80: error: identifier expected but '}' found.
}
^